cabal-version:      2.4
name:               AOC2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             erikOrtenberg
maintainer:         erik.ortenberg@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable AOC2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12, Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day22, Day23, Day24, Day25, GetInput

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, containers, split, pqueue, psqueues, text, vector
    hs-source-dirs:   app, solutions
    default-language: Haskell2010
